@@ -80,8 +80,8 @@
                     <onright>8000</onright>
                     <ondown>12</ondown>
                     <pagecontrol>-</pagecontrol>
-                    <scrolltime tween="sine" easing="inout">200</scrolltime>
-                    <itemlayout height="1-row">
+                    <scrolltime>200</scrolltime>
+                    <itemlayout width="12-col" height="1-row">
                         <control type="image">
                             <posx>0</posx>
                             <posy>0</posy>
@@ -99,12 +99,12 @@
                             <height>1-row</height>
                             <font>itemTitle</font>
                             <textcolor>selected</textcolor>
-                            <selectedcolor>black</selectedcolor>
+                            <selectedcolor>selected</selectedcolor>
                             <info>ListItem.Label</info>
                             <shadowcolor>-</shadowcolor>
                         </control>
                     </itemlayout>
-                    <focusedlayout height="1-row">
+                    <focusedlayout width="12-col" height="1-row">
                         <control type="image">
                             <posx>0</posx>
                             <posy>0</posy>
