@@ -6,47 +6,48 @@
         <include>modalDialog</include>
         <control type="group">
             <posx>col-1-begin</posx>
-            <posy>row-1-begin</posy>
+            <posy>row-4-begin</posy>
             <control type="image">
-                <posx>4-col</posx>
-                <posy>row-2-begin</posy>
-                <width>16-col</width>
-                <height>11-row</height>
+                <posx>0</posx>
+                <posy>0</posy>
+                <width>16-col-gutter</width>
+                <height>-</height>
+				<aspectratio align="left" aligny="top">keep</aspectratio>
                 <texture>$INFO[listitem.thumb]</texture>
             </control>
             <control type="panel" id="5">
-                <posx>0</posx>
-                <posy>14-row</posy>
-                <width>24-col</width>
-                <height>190</height>
-                <itemlayout width="12-col" height="36">
+                <posx>16-col</posx>
+                <posy>0</posy>
+                <width>8-col</width>
+                <height>10-row</height>
+                <itemlayout width="8-col" height="36">
                     <control type="label">
                         <posx>0</posx>
                         <width>4-col-gutter</width>
                         <info>ListItem.Label</info>
-                        <font>regularSemibold</font>
+                        <font>smallStrong</font>
                     </control>
                     <control type="label">
                         <posx>4-col</posx>
                         <width>8-col-gutter</width>
                         <align>left</align>
                         <info>ListItem.Label2</info>
-                        <font>regular</font>
+                        <font>smallMedium</font>
                     </control>
                 </itemlayout>
-                <focusedlayout width="12-col" height="36">
+                <focusedlayout width="8-col" height="36">
                     <control type="label">
                         <posx>0</posx>
                         <width>4-col-gutter</width>
                         <info>ListItem.Label</info>
-                        <font>regularSemibold</font>
+                        <font>smallStrong</font>
                     </control>
                     <control type="label">
                         <posx>4-col</posx>
                         <width>8-col-gutter</width>
                         <align>left</align>
                         <info>ListItem.Label2</info>
-                        <font>regular</font>
+                        <font>smallMedium</font>
                     </control>
                 </focusedlayout>
             </control>
