@@ -52,7 +52,7 @@
     </variable>
     <!--list view item detail / subheader-->
     <variable name="itemDetail">
-        <value condition="Container.Content(movies)">$INFO[Listitem.Year] • $VAR[itemResolution] $INFO[ListItem.VideoResolution]</value>
+        <value condition="Container.Content(movies)">$INFO[Listitem.duration,,$LOCALIZE[31018]] • $VAR[itemResolution] $INFO[ListItem.VideoResolution]</value>
         <value condition="Container.Content(tvshows)">$INFO[ListItem.Property(TotalEpisodes)] $LOCALIZE[20360]</value>
         <value condition="Container.Content(seasons)">$INFO[ListItem.Property(UnWatchedEpisodes)] $LOCALIZE[16101]</value>
         <value condition="Container.Content(artists)">$INFO[ListItem.Property(Artist_Genre)]</value>
